[package]
name = "tokio-stream-multiplexor"
version = "0.5.7"
authors = ["Greg \"GothAck\" Miell <rust@greg.gothack.ninja>"]
description = "Stream Multiplexor for tokio with a tcp like interface"
repository = "https://github.com/GothAck/tokio-stream-multiplexor"
documentation = "https://docs.rs/tokio-stream-multiplexor"
categories = ["asynchronous", "network-programming"]
readme = "README.md"
license = "MIT"
edition = "2021"

[dependencies]
async-channel = "1.7.1"
bincode = "1.3.3"
bytes = { version = "1.3.0", features = ["serde"] }
futures = "0.3.25"
futures-util = "0.3.25"
rand = "0.8.5"
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.22.0", features = ["io-util", "io-std", "rt", "net", "macros"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
tracing = "0.1.37"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["async_tokio"] }
ctor = "0.1.26"
tokio = { version = "1.22.0", features = ["io-util", "io-std", "rt", "net", "macros", "time", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
version-sync = "0.9.4"

[lib]
path = "src/lib.rs"

[[bench]]
name = "benches"
harness = false
